--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Registro de Usuario</h2>
+        <h2>Registro de Usuario crear por Miguel Evangelista 100387597</h2>
         <form action="procesar_formulario.php" method="POST">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
